# intelligent-personal-assistant

./: .gitignore  README.md  main.py  pyproject.toml
src/: agents.py  config.py  logs.py  prompts.py  utils.py
src/tools/: calendar.py  email.py  search.py  weather.py
